# kohi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: pytest.yml  python-publish.yml
kohi/: __init__.py  base.py  dictionary.py  enum.py  exceptions.py  number.py  string.py
tests/: test_base.py  test_dictionary.py  test_enum.py  test_number.py  test_string.py
