[tool.poetry]
name = "kohi"
version = "0.1.0"
description = "A powerfull schema validator"
readme = "README.md"
authors = ["Natan Santos <natansantosapps@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
